--- a/src/main/resources/templates/loginerror.html
+++ b/src/main/resources/templates/loginerror.html
@@ -26,7 +26,7 @@
     <title>Login error!</title>
 </head>
 <body>
-    <h1>This <span data-th-text="${email}"></span> or password input is wrong. Try Again!</h1><br>
+    <h1>This email <span data-th-text="${email}"></span> or password input is wrong. Try Again!</h1><br>
     <!-- <form action="/directToLogin" method="POST">
         <input type="submit" value="Login with new acc"> 
     </form> -->
