--- a/src/main/resources/templates/userReg.html
+++ b/src/main/resources/templates/userReg.html
@@ -31,7 +31,7 @@ input[type=submit]:hover {
         <label for="email">Email:</label><br>
         <input type="text" id="email" name="email" class="form-control" required><br>
         <label for="pw">Password:</label><br>
-        <input type="text" id="pw" name="password" class="form-control" required minlength="8">
+        <input type="password" id="pw" name="password" class="form-control" required minlength="8">
         <input type="submit" value="Register">
     </form>
 </body>
